# tutorial-app

./: .gitignore  Cargo.toml  README.md  global.css
src/: infopage.rs  main.rs  welcomepage.rs
src/shoppinglist_page/: listitem.rs  listitem_form.rs  listitem_styles.css  mod.rs
