[package]
name = "template-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wal-core = "0.1.1"
wal-rsx = "0.1.2"
wal-css = "0.1.1"
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.64"
features = ["HtmlInputElement"]
